--- a/source-css/clopclop.css
+++ b/source-css/clopclop.css
@@ -1,3 +1,13 @@
+/* Temp CATG2 Code */
+
+.side .titlebox .usertext-body > .md > p:nth-child(1) > a {display:block;background:#cee3f8;text-align:center;padding:10px 0px;border-radius:3px;margin:10px -10px;border:1px solid #9af;box-shadow:0 0 10px rgba(0,0,50,0.2);}
+
+
+
+
+
+
+
 /* Report form */
 .reportform.active:before {
     content: "Notice: Please only report actual rule infractions, DO NOT use the report function as a way of suggesting rules or telling the moderators about your opinions.";
