--- a/source-css/flurryheart.css
+++ b/source-css/flurryheart.css
@@ -35,7 +35,7 @@ content: " looking at cute ponies"
 /*---------------------------------------------------------------------------------------------------------------------------------------*/
 
 a[href|="/fhhappy"],a[href|="/fhhuh"],a[href|="/fhshocked"],a[href|="/fhsleepy"],a[href|="/fh01"],a[href|="/flurryheart"],a[href|="/fhseesyou"],a[href|="/fharmor"],a[href|="/fhmagic"],a[href|="/flurryandshiny"],a[href|="/flurry1"],a[href|="/flurry2"],
-a[href|="/babyalicorn"],a[href|="/fhfly"]{
+a[href|="/babyalicorn"],a[href|="/fhfly"],a[href |="/fhwarrior"]{
 
    display: block;
    clear: none;
@@ -56,5 +56,6 @@ a[href="/flurry1"]{        background-position: -200px -400px; width: 200px; hei
 a[href="/flurry2"]{        background-position: -400px -400px; width: 200px; height: 200px}
 a[href="/babyalicorn"]{    background-position:    0px -600px; width: 200px; height: 100px}
 a[href="/fhfly"]{          background-position:    0px -700px; width: 200px; height: 100px}
+a[href="/fhwarrior"]{      background-position: -200px -600px; width: 160px; height: 200px}
 
 /*---------------------------------------------------------------------------------------------------------------------------------------*/
