--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -172,9 +172,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Folks who survived Hiatus 2016"}
+div.titlebox .subscribers span.number:after {content:" Changlings"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " People who have actually seen this week's episode" }
+div.titlebox p.users-online span.number:after { content: " Radio Free Zerging" }
 div.titlebox p.users-online span.word { display: none }
 
 /*Flair modifications*/
