--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -234,7 +234,7 @@ a[href="/sbisonfire"], a[href="/roastedmarshmallow"], a[href="/grenlitbobonfirea
     Float: left;
     Width: 168px;
     Height: 200px;
-    background-image: url(%%roastedmarshmallow%%) !important
+    background-image: url(%%sbisonfirefirem%%) !important
 }
 
 a[href="/rdgrunkle"],a[href="/joaje"]{
