--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -34,8 +34,8 @@
 
 
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" staring into the Hiatus"}
-div.titlebox .users-online span.number:after {content:" have the Hiatus stare back."}
+div.titlebox .subscribers span.number:after {content:" Totally Normal Ponies"}
+div.titlebox .users-online span.number:after {content:" Making Friends and Having Fun"}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
@@ -177,7 +177,7 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%discentia-hat%%);
+ background:url(%%twilight-hat%%);
  width:70px;
  height:70px;
  margin-top:-45px;
@@ -1107,6 +1107,7 @@ table tr td:first-child {width:14px}
 {
  content:"table";
  font-variant:small-caps;
+ font-size: 10px;
 }
 
 .side .md table {margin:0;}
