--- a/source-css/shymotes.css
+++ b/source-css/shymotes.css
@@ -1754,6 +1754,150 @@ a[href|="/tiam10"]{
 
 
 
+a[href="/flutterdashcute"],
+
+a[href="/flutterdashkissy"],
+
+a[href="/flutterrelax"],
+
+a[href="/fluttersocks"],
+
+a[href="/flutterhappyapple"],
+
+a[href="/gangstaflutters"],
+
+a[href="/flutterpaper"],
+
+a[href="/flutterscrunch"],
+
+a[href="/flutterreally"],
+
+a[href="/flutterdashtummy"],
+
+a[href="/flutterdashlick"]{
+
+  display:block;
+
+  clear:none;
+
+  float:left;
+
+  background-image:url(%%shymoteslarge01%%);
+
+}
+
+a[href|="/flutterdashcute"]{
+
+  background-position:-0px -0px;
+
+  width:200px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterdashkissy"]{
+
+  background-position:-0px -150px;
+
+  width:197px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterrelax"]{
+
+  background-position:-0px -300px;
+
+  width:217px;
+
+  height:150px;
+
+}
+
+a[href|="/fluttersocks"]{
+
+  background-position:-0px -450px;
+
+  width:133px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterhappyapple"]{
+
+  background-position:-0px -600px;
+
+  width:153px;
+
+  height:150px;
+
+}
+
+a[href|="/gangstaflutters"]{
+
+  background-position:-0px -750px;
+
+  width:166px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterpaper"]{
+
+  background-position:-0px -900px;
+
+  width:159px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterscrunch"]{
+
+  background-position:-0px -1050px;
+
+  width:136px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterreally"]{
+
+  background-position:-0px -1200px;
+
+  width:119px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterdashtummy"]{
+
+  background-position:-0px -1350px;
+
+  width:196px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterdashlick"]{
+
+  background-position:-0px -1500px;
+
+  width:212px;
+
+  height:150px;
+
+}
+
+
+
 
 
 a[href="/fsnom"]{
@@ -1780,7 +1924,6 @@ a[href|="/fsnom"]{
 
 
 
-
 a[href="/pattycake"]{
 
   display:block;
@@ -1798,6 +1941,54 @@ a[href|="/pattycake"]{
   background-position:-0px -0px;
 
   width:255px;
+
+  height:150px;
+
+}
+
+
+
+a[href="/rdpopcorn"]{
+
+  display:block;
+
+  clear:none;
+
+  float:left;
+
+  background-image:url(%%rdpopcorn%%);
+
+}
+
+a[href|="/rdpopcorn"]{
+
+  background-position:-0px -0px;
+
+  width:126px;
+
+  height:150px;
+
+}
+
+
+
+a[href="/flutterscratch"]{
+
+  display:block;
+
+  clear:none;
+
+  float:left;
+
+  background-image:url(%%flutterscratch%%);
+
+}
+
+a[href|="/flutterscratch"]{
+
+  background-position:-0px -0px;
+
+  width:150px;
 
   height:150px;
 
