--- a/source-css/antisonicmotes.css
+++ b/source-css/antisonicmotes.css
@@ -79,7 +79,7 @@ a[href="/discordsterror"]{        background-position: -500px    0px; width: 165
 
 /*Sheet 2*/
 
-a[href|="/rariball"],a[href|="/rdfillies"],a[href|="/sblook"],a[href|="/sweetiedash"],a[href|="/woonabelle"],a[href="/timidashie"],a[href="/ssanime"],a[href="/giantbelle"],a[href="/sbmic"]{
+a[href|="/rariball"],a[href|="/rdfillies"],a[href|="/sblook"],a[href|="/sweetiedash"],a[href|="/woonabelle"],a[href="/timidashie"],a[href="/ssanime"],a[href="/giantbelle"],a[href="/sbmic"],a[href="/tsrainspeak"],a[href="/kingsombrero"]{
 
    display: block;
    clear: none;
@@ -95,6 +95,8 @@ a[href="/timidashie"]{       background-position:    0px   -400px;    width: 180
 a[href="/ssanime"]{          background-position:    0px   -600px;    width: 100px; height: 200px}
 a[href="/giantbelle"]{       background-position:    -400px   -200px; width: 200px; height: 200px}
 a[href="/sbmic"]{            background-position:    -500px      0px; width: 147px; height: 200px}
+a[href="/tsrainspeak"]{      background-position:    -700px      0px; width: 123px; height: 200px}
+a[href="/kingsombrero"]{      background-position:   -600px   -200px; width: 170px; height: 200px}
 
 /* Fritters Table <3 */
 
