--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -497,7 +497,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -513,7 +513,7 @@ a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100d 'motes */
-a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"], a[href|="/ponk"], a[href|="/nerdfleetfoot"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"]
+a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"], a[href|="/ponk"], a[href|="/nerdfleetfoot"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"], a[href|="/flutterhonk"]
 {background-image:url(%%100x100d%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -613,6 +613,10 @@ a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fsw
 a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch"], a[href|="/flutterawe"], a[href|="/discordbox"], a[href|="/sweetiebow"], a[href|="/extrachibipinkie"], a[href|="/twiart"], a[href|="/changelingscared"], a[href|="/starlightyouknow"], a[href|="/medicshy"], a[href|="/firinmaheeyup"], a[href|="/celestiawb"], a[href|="/rdthathurt"], a[href|="/sslove"], a[href|="/squareroot"], a[href|="/flirttwi"], a[href|="/flirtwi"], a[href|="/ajrdhoofbump"], a[href|="/nospoilers"], a[href|="/saltydash"], a[href|="/woonashrug"], a[href|="/chickenface"], a[href|="/sillystare"], a[href|="/mothpone"], a[href|="/blushychangeling"], a[href|="/sunlight"], a[href|="/mothcheeks"], a[href|="/scootamoose"]
 {background-image:url(%%misfitsn%%);display:block;float:left;}
 
+/* Misfits o */
+a[href|="/flscrunch"], a[href|="/downcastspike"]
+{background-image:url(%%misfitso%%);display:block;float:left;}
+
 /*
   ------
  */
@@ -678,7 +682,7 @@ a[href|="/rarityspy"], a[href|="/discoin"], a[href|="/ajduckface"], a[href|="/ne
 {background-position: -200% -400%;}
 
 /* Grid pos 0,5 'motes */
-a[href|="/twilightyay"], a[href|="/nerdtrixie"], a[href|="/rarapossessed"], a[href|="/rdscreaminginternally"], a[href|="/twilikethis"], a[href|="/incognitotwi"], a[href|="/changelingshrug"], a[href|="/ididntlisten"], a[href="/starlightnerd"], a[href|="/sadscoots"]
+a[href|="/twilightyay"], a[href|="/nerdtrixie"], a[href|="/rarapossessed"], a[href|="/rdscreaminginternally"], a[href|="/twilikethis"], a[href|="/incognitotwi"], a[href|="/changelingshrug"], a[href|="/ididntlisten"], a[href="/starlightnerd"], a[href|="/sadscoots"], a[href|="/flutterhonk"]
 {background-position: 0 -500%;}
 
 /* Grid pos 1,5 'motes */
@@ -722,15 +726,15 @@ a[href|="/shibelyra"], a[href|="/rdtwisquint"], a[href|="/chrome"], a[href|="/vi
 {background-position: -100% -800%;}
 
 /* Grid pos 2,8 'motes */
-a[href|="/shibemena"], a[href|="/rdtwistare"], a[href|="/firefox"], a[href|="/horsewife"], a[href|="/browniebun"]
+a[href|="/shibemena"], a[href|="/rdtwistare"], a[href|="/firefox"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/supersmugdash"]
 {background-position: -200% -800%;}
 
 /* Grid pos 0,9 'motes */
-a[href|="/shibepie"], a[href|="/rdtwiponder"], a[href|="/derpyhasmuffin"], a[href|="/scratchhide"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"]
+a[href|="/shibepie"], a[href|="/rdtwiponder"], a[href|="/derpyhasmuffin"], a[href|="/scratchhide"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/rdyes"]
 {background-position: -0% -900%;}
 
 /* Grid pos 1,9 'motes */
-a[href|="/shibeluna"], a[href|="/twilightstare"], a[href|="/raraglee"], a[href|="/octavia0"], a[href|="/echtron"]
+a[href|="/shibeluna"], a[href|="/twilightstare"], a[href|="/raraglee"], a[href|="/octavia0"], a[href|="/echtron"], a[href|="/starlightbeam"]
 {background-position: -100% -900%;}
 
 /* Grid pos 2,9 'motes */
@@ -1375,3 +1379,5 @@ a[href|="/blushychangeling"] {width:120px;height:200px;background-position: -54p
 a[href|="/sunlight"] {width:105px;height:150px;background-position: -658px -447px;}
 a[href|="/mothcheeks"] {width:125px;height:103px;background-position: -533px -491px;}
 a[href|="/scootamoose"] {width:100px;height:73px;background-position: -370px -474px;}
+a[href|="/flscrunch"] {width:150px;height:115px;}
+a[href|="/downcastspike"] {width:75px;height:100px;background-position: 0 -115px;}
