Stylesheet/emote/tag updates 2016-09-21

--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -497,7 +497,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -614,7 +614,7 @@ a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch
 {background-image:url(%%misfitsn%%);display:block;float:left;}
 
 /* Misfits o */
-a[href|="/flscrunch"], a[href|="/downcastspike"]
+a[href|="/flscrunch"], a[href|="/downcastspike"], a[href|="/lyraseewhatyoudidthere"], a[href|="/spikefakesmile"], a[href|="/babythorax"], a[href|="/babychangeling"]
 {background-image:url(%%misfitso%%);display:block;float:left;}
 
 /*
@@ -738,7 +738,7 @@ a[href|="/shibeluna"], a[href|="/twilightstare"], a[href|="/raraglee"], a[href|=
 {background-position: -100% -900%;}
 
 /* Grid pos 2,9 'motes */
-a[href|="/shibederp"], a[href|="/nursesaywhat"], a[href|="/fillyderpysit"], a[href|="/braehay"], a[href|="/fonso"]
+a[href|="/shibederp"], a[href|="/nursesaywhat"], a[href|="/fillyderpysit"], a[href|="/braehay"], a[href|="/fonso"], a[href|="/nervousshy"]
 {background-position: -200% -900%;}
 
 /* Grid pos 0,10 'motes */
@@ -1381,3 +1381,6 @@ a[href|="/mothcheeks"] {width:125px;height:103px;background-position: -533px -49
 a[href|="/scootamoose"] {width:100px;height:73px;background-position: -370px -474px;}
 a[href|="/flscrunch"] {width:150px;height:115px;}
 a[href|="/downcastspike"] {width:75px;height:100px;background-position: 0 -115px;}
+a[href|="/lyraseewhatyoudidthere"] {width:115px;height:150px;background-position: 0 -215px;}
+a[href|="/spikefakesmile"] {width:76px;height:100px;background-position: -75px -115px;}
+a[href|="/babythorax"], a[href|="/babychangeling"] {width:62px;height:100px;background-position: -151px -115px;}
